--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
-### Java ###
-*.class
-
-### Package Files ###
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
 *.jar
-*.war
-*.ear
+*.rar
+*.tar
+*.zip
 
 
 ### NetBeans ###
@@ -17,18 +22,6 @@ nbactions.xml
 nb-configuration.xml
 
 
-### Linux ###
-*~
-
-
-### Windows ###
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
-
-# Folder config file
-Desktop.ini
-
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
@@ -37,3 +30,23 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+Desktop.ini
