--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# temporary
+build.xml
+manifest.xml
+
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
@@ -13,6 +17,7 @@
 
 
 ### NetBeans ###
+nbproject
 nbproject/private/
 build/
 nbbuild/
