--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>osef</groupId>
-  <artifactId>Jenseits</artifactId>
+  <groupId>com.miage</groupId>
+  <artifactId>jenseits-von-theben</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>Jenseits</name>
-  <url>http://maven.apache.org</url>
+  <name>jenseits-von-theben</name>
+  <url>https://github.com/mbret/jenseits-von-theben</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,8 +18,9 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.11</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
 </project>
