gestion des fichiers de conf OK ajout de options.ini pour les options de l'utilisateurs de l'applciation (son, etc) init des areas à partir du fichier de conf OK

--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,32 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.10</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.ini4j</groupId>
+            <artifactId>ini4j</artifactId>
+            <version>0.5.2</version>
+        </dependency>
+    </dependencies>
   
+  
+    <build>
+         <!--Default resources are located inside src/main/resources--> 
+        <resources>
+             <!--Supplementary resource path--> 
+            <resource>
+                <directory>src/main/config</directory>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+    </build>
+
 </project>
