--- a/src/main/config/config.properties
+++ b/src/main/config/config.properties
@@ -15,7 +15,7 @@ nbEmptyTokenPoint = 16
 # --------------------------
 
 # ------------------------------------------------------------------------------
-#                                   INIT
+#                                   AREAS
 # ------------------------------------------------------------------------------
 # london
 areas.touristic.london.name                 = london
@@ -206,9 +206,3 @@ areas.excavation.mesopotamia.to.crete             = palestine
 areas.excavation.mesopotamia.to.egypt             = palestine
 areas.excavation.mesopotamia.to.palestine         = crete
 areas.excavation.mesopotamia.to.mesopotamia       = 
-
-
-# ------------------------------------------------------------------------------
-#                                   Test
-# ------------------------------------------------------------------------------
-test = 50
