modif de properties, ajout des logs, ajour d'une classe exemple pour les conventions de codage, ajout de dependances dans le pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -15,16 +15,24 @@
   </properties>
 
     <dependencies>
+        <!--Unit test API-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
+        <!--Ini manager API-->
         <dependency>
             <groupId>org.ini4j</groupId>
             <artifactId>ini4j</artifactId>
             <version>0.5.2</version>
+        </dependency>
+        <!--Logging API-->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
     </dependencies>
   
