--- a/src/main/config/config.properties
+++ b/src/main/config/config.properties
@@ -6,16 +6,19 @@
 # ------------------------------------------------------------------------------
 
 
-# --------------------------
-#           General
-# --------------------------
-nbEmptyTokenPoint = 16
-# --------------------------
-#           Rules
-# --------------------------
+# ------------------------------------------------------------------------------
+#                                   General
+# ------------------------------------------------------------------------------
+
 
 # ------------------------------------------------------------------------------
-#                                   AREAS
+#                                   Rules
+# ------------------------------------------------------------------------------
+nbEmptyTokenPoint   = 16
+
+
+# ------------------------------------------------------------------------------
+#                                   Areas
 # ------------------------------------------------------------------------------
 # london
 areas.london.name                 = london
