--- a/src/main/config/config.properties
+++ b/src/main/config/config.properties
@@ -7,217 +7,11 @@
 
 
 # ------------------------------------------------------------------------------
-#                                   General
+#                     General (General configuration)
 # ------------------------------------------------------------------------------
 
 
 # ------------------------------------------------------------------------------
-#                                   Rules
+#                     Rules (configuration about game's rules)
 # ------------------------------------------------------------------------------
 nbEmptyTokenPoint   = 16
-
-
-# ------------------------------------------------------------------------------
-#                                   Areas
-# ------------------------------------------------------------------------------
-# london
-areas.london.name                 = london
-areas.london.type                 = touristic
-areas.london.to.london            = 
-areas.london.to.paris             = 
-areas.london.to.roma              = paris
-areas.london.to.berlin            = paris
-areas.london.to.vienna            = berlin
-areas.london.to.warsaw            = berlin
-areas.london.to.moscow            = berlin,warsaw
-areas.london.to.greece            = paris,roma
-areas.london.to.crete             = paris,roma
-areas.london.to.egypt             = paris,roma,crete
-areas.london.to.palestine         = paris,roma,crete
-areas.london.to.mesopotamia       = paris,roma,greece
-
-# paris
-areas.paris.name                 = paris
-areas.paris.type                 = touristic
-areas.paris.to.london            = 
-areas.paris.to.paris             = 
-areas.paris.to.roma              = 
-areas.paris.to.berlin            = 
-areas.paris.to.vienna            = 
-areas.paris.to.warsaw            = berlin
-areas.paris.to.moscow            = berlin,warsow
-areas.paris.to.greece            = roma
-areas.paris.to.crete             = roma
-areas.paris.to.egypt             = roma,crete
-areas.paris.to.palestine         = roma,crete
-areas.paris.to.mesopotamia       = roma,greece
-
-# roma
-areas.roma.name                 = roma
-areas.roma.type                 = touristic
-areas.roma.to.london            = paris
-areas.roma.to.paris             = 
-areas.roma.to.roma              = 
-areas.roma.to.berlin            = paris
-areas.roma.to.vienna            = 
-areas.roma.to.warsaw            = vienna
-areas.roma.to.moscow            = vienna,warsow
-areas.roma.to.greece            = 
-areas.roma.to.crete             = 
-areas.roma.to.egypt             = crete
-areas.roma.to.palestine         = crete
-areas.roma.to.mesopotamia       = greece
-
-# berlin
-areas.berlin.name                 = berlin
-areas.berlin.type                 = touristic
-areas.berlin.to.london            = 
-areas.berlin.to.paris             = 
-areas.berlin.to.roma              = paris
-areas.berlin.to.berlin            = 
-areas.berlin.to.vienna            = warsaw
-areas.berlin.to.warsaw            = 
-areas.berlin.to.moscow            = warsaw
-areas.berlin.to.greece            = warsaw
-areas.berlin.to.crete             = warsaw,greece
-areas.berlin.to.egypt             = warsaw,crete
-areas.berlin.to.palestine         = warsaw,crete
-areas.berlin.to.mesopotamia       = warsaw,greece
-
-# vienna
-areas.vienna.name                 = vienna
-areas.vienna.type                 = touristic
-areas.vienna.to.london            = paris
-areas.vienna.to.paris             = 
-areas.vienna.to.roma              = 
-areas.vienna.to.berlin            = 
-areas.vienna.to.vienna            = 
-areas.vienna.to.warsaw            = 
-areas.vienna.to.moscow            = warsaw
-areas.vienna.to.greece            = roma
-areas.vienna.to.crete             = roma
-areas.vienna.to.egypt             = roma,crete
-areas.vienna.to.palestine         = roma,crete
-areas.vienna.to.mesopotamia       = roma,greece
-
-# warsaw
-areas.warsaw.name                 = warsaw
-areas.warsaw.type                 = touristic
-areas.warsaw.to.london            = berlin
-areas.warsaw.to.paris             = berlin
-areas.warsaw.to.roma              = vienna
-areas.warsaw.to.berlin            = 
-areas.warsaw.to.vienna            = 
-areas.warsaw.to.warsaw            = 
-areas.warsaw.to.moscow            = 
-areas.warsaw.to.greece            = 
-areas.warsaw.to.crete             = greece
-areas.warsaw.to.egypt             = greece,crete
-areas.warsaw.to.palestine         = greece,crete
-areas.warsaw.to.mesopotamia       = greece
-
-# moscow
-areas.moscow.name                 = moscow
-areas.moscow.type                 = touristic
-areas.moscow.to.london            = warsaw,berlin
-areas.moscow.to.paris             = warsaw,berlin
-areas.moscow.to.roma              = warsaw,vienna
-areas.moscow.to.berlin            = warsaw
-areas.moscow.to.vienna            = warsaw
-areas.moscow.to.warsaw            = 
-areas.moscow.to.moscow            = 
-areas.moscow.to.greece            = warsaw
-areas.moscow.to.crete             = warsaw,greece
-areas.moscow.to.egypt             = warsaw,greece,crete
-areas.moscow.to.palestine         = warsaw,greece,crete
-areas.moscow.to.mesopotamia       = warsaw,greece
-
-# greece
-areas.greece.name                 = greece
-areas.greece.type                 = excavation
-areas.greece.color                = #ff5b2b
-areas.greece.pointTokens          = 1:4,2:4,3:2,4:1,5:2,6:1
-areas.greece.to.london            = warsaw,berlin
-areas.greece.to.paris             = roma
-areas.greece.to.roma              = 
-areas.greece.to.berlin            = warsaw
-areas.greece.to.vienna            = roma
-areas.greece.to.warsaw            = 
-areas.greece.to.moscow            = warsaw
-areas.greece.to.greece            = 
-areas.greece.to.crete             = 
-areas.greece.to.egypt             = crete
-areas.greece.to.palestine         = crete
-areas.greece.to.mesopotamia       = 
-
-# crete
-areas.crete.name                        = crete
-areas.crete.type                        = excavation
-areas.crete.color                       = #895959
-areas.crete.pointTokens                 = 1:3,2:2,3:4,4:3,5:1,6:0
-areas.crete.to.london                   = roma,paris
-areas.crete.to.paris                    = roma
-areas.crete.to.roma                     = 
-areas.crete.to.berlin                   = roma,paris
-areas.crete.to.vienna                   = roma
-areas.crete.to.warsaw                   = greece
-areas.crete.to.moscow                   = greece,warsaw
-areas.crete.to.greece                   = 
-areas.crete.to.crete                    = 
-areas.crete.to.egypt                    = 
-areas.crete.to.palestine                = 
-areas.crete.to.mesopotamia              = palestine
-
-# egypt
-areas.egypt.name                        = egypt
-areas.egypt.type                        = excavation
-areas.egypt.color                       = #fff168
-areas.egypt.pointTokens                 = 1:4,2:2,3:3,4:2,5:1,6:1
-areas.egypt.to.london                   = crete,roma,paris
-areas.egypt.to.paris                    = crete,roma
-areas.egypt.to.roma                     = crete
-areas.egypt.to.berlin                   = crete,roma,paris
-areas.egypt.to.vienna                   = crete,roma
-areas.egypt.to.warsaw                   = crete,greece
-areas.egypt.to.moscow                   = crete,greece,warsaw
-areas.egypt.to.greece                   = crete
-areas.egypt.to.crete                    = 
-areas.egypt.to.egypt                    = 
-areas.egypt.to.palestine                = 
-areas.egypt.to.mesopotamia              = palestine
-
-# palestine
-areas.palestine.name                    = palestine
-areas.palestine.type                    = excavation
-areas.palestine.color                   = #b7ca79
-areas.palestine.pointTokens             = 1:5,2:3,3:1,4:1,5:1,6:1,7:1
-areas.palestine.to.london               = crete,roma,paris
-areas.palestine.to.paris                = crete,roma
-areas.palestine.to.roma                 = crete
-areas.palestine.to.berlin               = crete,greece,warsaw
-areas.palestine.to.vienna               = crete,roma
-areas.palestine.to.warsaw               = crete,greece
-areas.palestine.to.moscow               = crete,greece,warsaw
-areas.palestine.to.greece               = crete
-areas.palestine.to.crete                = 
-areas.palestine.to.egypt                = 
-areas.palestine.to.palestine            = 
-areas.palestine.to.mesopotamia          = 
-
-# mesopotamia
-areas.mesopotamia.name                  = mesopotamia
-areas.mesopotamia.type                  = excavation
-areas.mesopotamia.color                 = #375d81
-areas.mesopotamia.pointTokens           = 1:5,3:3,4:3,5:2,6:1,7:1
-areas.mesopotamia.to.london             = greece,roma,paris
-areas.mesopotamia.to.paris              = greece,roma
-areas.mesopotamia.to.roma               = greece
-areas.mesopotamia.to.berlin             = greece,warsaw
-areas.mesopotamia.to.vienna             = greece,roma
-areas.mesopotamia.to.warsaw             = greece
-areas.mesopotamia.to.moscow             = greece,warsaw
-areas.mesopotamia.to.greece             = 
-areas.mesopotamia.to.crete              = palestine
-areas.mesopotamia.to.egypt              = palestine
-areas.mesopotamia.to.palestine          = crete
-areas.mesopotamia.to.mesopotamia        = 
