--- a/src/main/config/cards.properties
+++ b/src/main/config/cards.properties
@@ -15,117 +15,121 @@ card.1        = london,excavationAuthorization,3
 card.2        = moscow,excavationAuthorization,3
 
 # Zeppelin cards
-card.3        = london,zeppelin,1
+card.3        = roma,zeppelin,1
+card.4       = vienna,zeppelin,1
 
 # carCard cards
-card.4        = moscow,car,1
-card.5        = roma,car,1
+card.5        = moscow,car,1
+card.6        = roma,car,1
 
 # congressCard cards
-card.6        = london,congress,2
-card.7        = paris,congress,2
-card.8        = berlin,congress,2
-card.9        = vienna,congress,2
-card.10       = moscow,congress,2
+card.7        = london,congress,2
+card.8        = paris,congress,2
+card.9        = berlin,congress,2
+card.10        = vienna,congress,2
+card.11       = moscow,congress,2
+card.12        = paris,congress,2
+card.13       = berlin,congress,2
+card.14       = vienna,congress,2
+card.15       = moscow,congress,2
 
 # Assistant cards
-card.11       = paris,assistant,2
-card.12       = berlin,assistant,2
-card.13       = vienna,assistant,2
-card.14       = roma,assistant,2
+card.16       = paris,assistant,2
+card.17       = paris,assistant,2
+card.18       = berlin,assistant,2
+card.19       = vienna,assistant,2
+card.20       = vienna,assistant,2
+card.21       = roma,assistant,2
 
 # Shovel cards
-card.15       = london,shovel,3
-card.16       = roma,shovel,3
-card.17       = moscow,shovel,3
+card.22       = london,shovel,3
+card.23       = roma,shovel,3
+card.24       = moscow,shovel,3
+card.25       = london,shovel,3
+card.26       = roma,shovel,3
+card.27       = moscow,shovel,3
 
 # PATTERN : $area,$typeOfClass,$weekCost,$value
 # GeneralKnowledge cards
-card.18        = paris,generalKnowledge,3,1
-card.19        = paris,generalKnowledge,6,2
-card.20        = roma,generalKnowledge,3,1
-card.21        = berlin,generalKnowledge,3,1
-card.22        = berlin,generalKnowledge,6,2
-card.23        = vienna,generalKnowledge,3,1
-card.24        = london,generalKnowledge,6,2
-card.25        = moscow,generalKnowledge,6,2
+card.28        = paris,generalKnowledge,3,1
+card.29        = paris,generalKnowledge,6,2
+card.30        = roma,generalKnowledge,3,1
+card.31        = berlin,generalKnowledge,3,1
+card.32        = berlin,generalKnowledge,6,2
+card.33        = vienna,generalKnowledge,3,1
+card.34        = london,generalKnowledge,6,2
+card.35        = moscow,generalKnowledge,6,2
 
 # PATTERN : $area,$typeOfClass,$weekCost,$value,$excavationArea
 # SpecificKnowledge cards
-card.26        = roma,specificKnowledge,1,1,greece
-card.27        = roma,specificKnowledge,2,2,greece
-card.28        = berlin,specificKnowledge,1,1,greece
-card.29        = berlin,specificKnowledge,4,3,greece
-card.30        = vienna,specificKnowledge,1,1,greece
-card.31        = moscow,specificKnowledge,1,1,greece
-card.32        = london,specificKnowledge,2,2,greece
-card.33        = london,specificKnowledge,4,3,greece
-card.34        = paris,specificKnowledge,1,1,crete
-card.35        = paris,specificKnowledge,2,2,crete
-card.36        = vienna,specificKnowledge,1,1,crete
-card.37        = vienna,specificKnowledge,2,2,crete
-card.38        = roma,specificKnowledge,2,2,crete
-card.39        = moscow,specificKnowledge,4,3,crete
-card.40        = roma,specificKnowledge,1,1,egypt
-card.41        = paris,specificKnowledge,1,1,egypt
-card.42        = berlin,specificKnowledge,2,2,egypt
-card.43        = london,specificKnowledge,2,2,egypt
-card.44        = london,specificKnowledge,4,3,egypt
-card.45        = moscow,specificKnowledge,1,1,egypt
-card.46        = moscow,specificKnowledge,4,3,egypt
-card.47        = vienna,specificKnowledge,1,1,palestine
-card.48        = roma,specificKnowledge,1,1,palestine
-card.49        = paris,specificKnowledge,2,2,palestine
-card.50        = berlin,specificKnowledge,2,2,palestine
-card.51        = london,specificKnowledge,2,2,palestine
-card.52        = london,specificKnowledge,4,3,palestine
-card.53        = paris,specificKnowledge,4,3,palestine
-card.54        = paris,specificKnowledge,1,1,mesopotamia
-card.55        = roma,specificKnowledge,1,1,mesopotamia
-card.57        = moscow,specificKnowledge,2,2,mesopotamia
-card.58        = vienna,specificKnowledge,2,2,mesopotamia
-card.59        = london,specificKnowledge,2,2,mesopotamia
-card.60        = moscow,specificKnowledge,4,3,mesopotamia
-card.61        = london,specificKnowledge,4,3,mesopotamia
+card.36        = roma,specificKnowledge,1,1,greece
+card.37        = roma,specificKnowledge,2,2,greece
+card.38        = roma,specificKnowledge,2,2,greece
+card.39        = berlin,specificKnowledge,1,1,greece
+card.40        = berlin,specificKnowledge,4,3,greece
+card.41        = vienna,specificKnowledge,1,1,greece
+card.42        = moscow,specificKnowledge,1,1,greece
+card.43        = london,specificKnowledge,2,2,greece
+card.44        = london,specificKnowledge,4,3,greece
+
+card.45        = berlin,specificKnowledge,1,1,crete
+card.46        = berlin,specificKnowledge,1,1,crete
+card.47        = paris,specificKnowledge,1,1,crete
+card.48        = vienna,specificKnowledge,1,1,crete
+card.49        = paris,specificKnowledge,2,2,crete
+card.50        = vienna,specificKnowledge,2,2,crete
+card.51        = roma,specificKnowledge,2,2,crete
+card.52        = moscow,specificKnowledge,4,3,crete
+card.53        = moscow,specificKnowledge,4,3,crete
+
+card.54        = roma,specificKnowledge,1,1,egypt
+card.55        = paris,specificKnowledge,1,1,egypt
+card.56        = paris,specificKnowledge,1,1,egypt
+card.57        = moscow,specificKnowledge,1,1,egypt
+card.58        = berlin,specificKnowledge,2,2,egypt
+card.59        = berlin,specificKnowledge,2,2,egypt
+card.60        = london,specificKnowledge,2,2,egypt
+card.61        = london,specificKnowledge,4,3,egypt
+card.62        = moscow,specificKnowledge,4,3,egypt
+
+card.63        = vienna,specificKnowledge,1,1,palestine
+card.64        = vienna,specificKnowledge,1,1,palestine
+card.65        = vienna,specificKnowledge,1,1,palestine
+card.66        = roma,specificKnowledge,1,1,palestine
+card.67        = paris,specificKnowledge,2,2,palestine
+card.68        = berlin,specificKnowledge,2,2,palestine
+card.69        = london,specificKnowledge,2,2,palestine
+card.70        = london,specificKnowledge,4,3,palestine
+card.71        = paris,specificKnowledge,4,3,palestine
+
+card.72        = paris,specificKnowledge,1,1,mesopotamia
+card.73        = roma,specificKnowledge,1,1,mesopotamia
+card.74        = moscow,specificKnowledge,1,1,mesopotamia
+card.75        = moscow,specificKnowledge,1,1,mesopotamia
+card.76        = vienna,specificKnowledge,2,2,mesopotamia
+card.77        = vienna,specificKnowledge,2,2,mesopotamia
+card.78        = london,specificKnowledge,2,2,mesopotamia
+card.79        = moscow,specificKnowledge,4,3,mesopotamia
+card.80        = london,specificKnowledge,4,3,mesopotamia
 
 # PATTERN : $area,$typeOfClass,$weekCost,$value,$excavationArea
 # EthnologicalKnowledge card
-card.62        = moscow,ethnologicalKnowledge,1,2,greece
-card.63        = paris,ethnologicalKnowledge,1,2,crete
-card.64        = roma,ethnologicalKnowledge,1,2,egypt
-card.65        = vienna,ethnologicalKnowledge,1,2,palestine
-card.66        = berlin,ethnologicalKnowledge,1,2,mesopotamia
+card.81        = moscow,ethnologicalKnowledge,1,2,greece
+card.82        = paris,ethnologicalKnowledge,1,2,crete
+card.83        = roma,ethnologicalKnowledge,1,2,egypt
+card.84        = vienna,ethnologicalKnowledge,1,2,palestine
+card.85        = berlin,ethnologicalKnowledge,1,2,mesopotamia
 
 # PATTERN : $area,$typeOfClass,$weekCost,$bigExpo(boolean)
 # Expo card
-card.67        = london,expo,3,false
-card.68        = paris,expo,3,false
-card.69        = berlin,expo,3,false
-card.70        = vienna,expo,3,false
-card.71        = moscow,expo,3,false
-card.72        = london,expo,4,true
-card.73        = paris,expo,4,true
-card.74        = berlin,expo,4,true
-card.75        = vienna,expo,4,true
-card.76        = moscow,expo,4,true
+card.86        = london,expo,3,false
+card.87        = paris,expo,3,false
+card.88        = berlin,expo,3,false
+card.89        = vienna,expo,3,false
+card.90        = moscow,expo,3,false
 
-
-# ------------------------------------------------------------------------------
-#                               Deck
-# ------------------------------------------------------------------------------
-deck.firstDeck.cards                = 1,2,3,3,4,5,6,7,7,8,8,9,9,10,10,11,11,12,13,13,14,15,15,16,16,17,17,18,19,20,21,22,23,24,25,26,27,27,28,29,30,31,32,33,34,35,36,37,38,39,39,40,41,41,42,42,43,44,45,46,47,47,47,48,49,50,51,53,52,54,55,57,57,58,58,59,60,61,62,63,64,65,66
-
-deck.1.cards                        =
-deck.1.cards.players.2              =
-deck.1.cards.players.3              =
-deck.1.cards.players.4              =
-
-deck.2.cards                        = 67,68,69,70,71
-deck.2.cards.players.2              = 72,73,74,75,76
-deck.2.cards.players.3              =
-deck.2.cards.players.4              =
-
-deck.sideDeck.cards                 =
-deck.sideDeck.cards.players.2       =
-deck.sideDeck.cards.players.3       = 72,73,74,75,76
-deck.sideDeck.cards.players.4       = 72,73,74,75,76
+card.91        = london,expo,4,true
+card.92        = paris,expo,4,true
+card.93        = berlin,expo,4,true
+card.94        = vienna,expo,4,true
+card.95        = moscow,expo,4,true
