ajout gestion des tokens dans l'init des area + ajout des id aux elements pour les liés aux fichiers images

--- a/src/main/config/cards.properties
+++ b/src/main/config/cards.properties
@@ -4,7 +4,8 @@
 #
 # ------------------------------------------------------------------------------
 
-
+# path to the cards images (.jpg)
+path = images/cards
 
 # ------------------------------------------------------------------------------
 #                     Cards (All unique differents cards)
@@ -16,7 +17,7 @@ card.2        = moscow,excavationAuthorization,3
 
 # Zeppelin cards
 card.3        = roma,zeppelin,1
-card.4       = vienna,zeppelin,1
+card.4        = vienna,zeppelin,1
 
 # carCard cards
 card.5        = moscow,car,1
