--- a/src/main/config/areas.properties
+++ b/src/main/config/areas.properties
@@ -5,205 +5,244 @@
 #
 # ------------------------------------------------------------------------------
 
+path    = images/tokens
+# path to token of egypt: path/egypt/
 
 # london
-london.name                 = london
-london.type                 = touristic
-london.to.london            = 
-london.to.paris             = 
-london.to.roma              = paris
-london.to.berlin            = paris
-london.to.vienna            = berlin
-london.to.warsaw            = berlin
-london.to.moscow            = berlin,warsaw
-london.to.greece            = paris,roma
-london.to.crete             = paris,roma
-london.to.egypt             = paris,roma,crete
-london.to.palestine         = paris,roma,crete
-london.to.mesopotamia       = paris,roma,greece
+area.london.name                 = london
+area.london.type                 = touristic
+area.london.id                   = 1
+area.london.to.london            = 
+area.london.to.paris             = 
+area.london.to.roma              = paris
+area.london.to.berlin            = paris
+area.london.to.vienna            = berlin
+area.london.to.warsaw            = berlin
+area.london.to.moscow            = berlin,warsaw
+area.london.to.greece            = paris,roma
+area.london.to.crete             = paris,roma
+area.london.to.egypt             = paris,roma,crete
+area.london.to.palestine         = paris,roma,crete
+area.london.to.mesopotamia       = paris,roma,greece
 
 # paris
-paris.name                  = paris
-paris.type                  = touristic
-paris.to.london             = 
-paris.to.paris              = 
-paris.to.roma               = 
-paris.to.berlin             = 
-paris.to.vienna             = 
-paris.to.warsaw             = berlin
-paris.to.moscow             = berlin,warsow
-paris.to.greece             = roma
-paris.to.crete              = roma
-paris.to.egypt              = roma,crete
-paris.to.palestine          = roma,crete
-paris.to.mesopotamia        = roma,greece
+area.paris.name                  = paris
+area.paris.type                  = touristic
+area.paris.id                   = 2
+area.paris.to.london             = 
+area.paris.to.paris              = 
+area.paris.to.roma               = 
+area.paris.to.berlin             = 
+area.paris.to.vienna             = 
+area.paris.to.warsaw             = berlin
+area.paris.to.moscow             = berlin,warsow
+area.paris.to.greece             = roma
+area.paris.to.crete              = roma
+area.paris.to.egypt              = roma,crete
+area.paris.to.palestine          = roma,crete
+area.paris.to.mesopotamia        = roma,greece
 
 # roma
-roma.name                 = roma
-roma.type                 = touristic
-roma.to.london            = paris
-roma.to.paris             = 
-roma.to.roma              = 
-roma.to.berlin            = paris
-roma.to.vienna            = 
-roma.to.warsaw            = vienna
-roma.to.moscow            = vienna,warsow
-roma.to.greece            = 
-roma.to.crete             = 
-roma.to.egypt             = crete
-roma.to.palestine         = crete
-roma.to.mesopotamia       = greece
+area.roma.name                 = roma
+area.roma.type                 = touristic
+area.roma.id                   = 3
+area.roma.to.london            = paris
+area.roma.to.paris             = 
+area.roma.to.roma              = 
+area.roma.to.berlin            = paris
+area.roma.to.vienna            = 
+area.roma.to.warsaw            = vienna
+area.roma.to.moscow            = vienna,warsow
+area.roma.to.greece            = 
+area.roma.to.crete             = 
+area.roma.to.egypt             = crete
+area.roma.to.palestine         = crete
+area.roma.to.mesopotamia       = greece
 
 # berlin
-berlin.name                 = berlin
-berlin.type                 = touristic
-berlin.to.london            = 
-berlin.to.paris             = 
-berlin.to.roma              = paris
-berlin.to.berlin            = 
-berlin.to.vienna            = warsaw
-berlin.to.warsaw            = 
-berlin.to.moscow            = warsaw
-berlin.to.greece            = warsaw
-berlin.to.crete             = warsaw,greece
-berlin.to.egypt             = warsaw,crete
-berlin.to.palestine         = warsaw,crete
-berlin.to.mesopotamia       = warsaw,greece
+area.berlin.name                 = berlin
+area.berlin.type                 = touristic
+area.berlin.id                   = 4
+area.berlin.to.london            = 
+area.berlin.to.paris             = 
+area.berlin.to.roma              = paris
+area.berlin.to.berlin            = 
+area.berlin.to.vienna            = warsaw
+area.berlin.to.warsaw            = 
+area.berlin.to.moscow            = warsaw
+area.berlin.to.greece            = warsaw
+area.berlin.to.crete             = warsaw,greece
+area.berlin.to.egypt             = warsaw,crete
+area.berlin.to.palestine         = warsaw,crete
+area.berlin.to.mesopotamia       = warsaw,greece
 
 # vienna
-vienna.name                 = vienna
-vienna.type                 = touristic
-vienna.to.london            = paris
-vienna.to.paris             = 
-vienna.to.roma              = 
-vienna.to.berlin            = 
-vienna.to.vienna            = 
-vienna.to.warsaw            = 
-vienna.to.moscow            = warsaw
-vienna.to.greece            = roma
-vienna.to.crete             = roma
-vienna.to.egypt             = roma,crete
-vienna.to.palestine         = roma,crete
-vienna.to.mesopotamia       = roma,greece
+area.vienna.name                 = vienna
+area.vienna.type                 = touristic
+area.vienna.id                   = 5
+area.vienna.to.london            = paris
+area.vienna.to.paris             = 
+area.vienna.to.roma              = 
+area.vienna.to.berlin            = 
+area.vienna.to.vienna            = 
+area.vienna.to.warsaw            = 
+area.vienna.to.moscow            = warsaw
+area.vienna.to.greece            = roma
+area.vienna.to.crete             = roma
+area.vienna.to.egypt             = roma,crete
+area.vienna.to.palestine         = roma,crete
+area.vienna.to.mesopotamia       = roma,greece
 
 # warsaw
-warsaw.name                 = warsaw
-warsaw.type                 = touristic
-warsaw.to.london            = berlin
-warsaw.to.paris             = berlin
-warsaw.to.roma              = vienna
-warsaw.to.berlin            = 
-warsaw.to.vienna            = 
-warsaw.to.warsaw            = 
-warsaw.to.moscow            = 
-warsaw.to.greece            = 
-warsaw.to.crete             = greece
-warsaw.to.egypt             = greece,crete
-warsaw.to.palestine         = greece,crete
-warsaw.to.mesopotamia       = greece
+area.warsaw.name                 = warsaw
+area.warsaw.type                 = touristic
+area.warsaw.id                   = 6
+area.warsaw.to.london            = berlin
+area.warsaw.to.paris             = berlin
+area.warsaw.to.roma              = vienna
+area.warsaw.to.berlin            = 
+area.warsaw.to.vienna            = 
+area.warsaw.to.warsaw            = 
+area.warsaw.to.moscow            = 
+area.warsaw.to.greece            = 
+area.warsaw.to.crete             = greece
+area.warsaw.to.egypt             = greece,crete
+area.warsaw.to.palestine         = greece,crete
+area.warsaw.to.mesopotamia       = greece
 
 # moscow
-moscow.name                 = moscow
-moscow.type                 = touristic
-moscow.to.london            = warsaw,berlin
-moscow.to.paris             = warsaw,berlin
-moscow.to.roma              = warsaw,vienna
-moscow.to.berlin            = warsaw
-moscow.to.vienna            = warsaw
-moscow.to.warsaw            = 
-moscow.to.moscow            = 
-moscow.to.greece            = warsaw
-moscow.to.crete             = warsaw,greece
-moscow.to.egypt             = warsaw,greece,crete
-moscow.to.palestine         = warsaw,greece,crete
-moscow.to.mesopotamia       = warsaw,greece
+area.moscow.name                 = moscow
+area.moscow.type                 = touristic
+area.moscow.id                   = 7
+area.moscow.to.london            = warsaw,berlin
+area.moscow.to.paris             = warsaw,berlin
+area.moscow.to.roma              = warsaw,vienna
+area.moscow.to.berlin            = warsaw
+area.moscow.to.vienna            = warsaw
+area.moscow.to.warsaw            = 
+area.moscow.to.moscow            = 
+area.moscow.to.greece            = warsaw
+area.moscow.to.crete             = warsaw,greece
+area.moscow.to.egypt             = warsaw,greece,crete
+area.moscow.to.palestine         = warsaw,greece,crete
+area.moscow.to.mesopotamia       = warsaw,greece
+
+
+# EXCAVATION AREAS
+# Pattern of tokens: id,value:occurence|..,..:..|.....
 
 # greece
-greece.name                 = greece
-greece.type                 = excavation
-greece.color                = #ff5b2b
-greece.pointTokens          = 1:4,2:4,3:2,4:1,5:2,6:1
-greece.to.london            = warsaw,berlin
-greece.to.paris             = roma
-greece.to.roma              = 
-greece.to.berlin            = warsaw
-greece.to.vienna            = roma
-greece.to.warsaw            = 
-greece.to.moscow            = warsaw
-greece.to.greece            = 
-greece.to.crete             = 
-greece.to.egypt             = crete
-greece.to.palestine         = crete
-greece.to.mesopotamia       = 
+area.greece.name                 = greece
+area.greece.type                 = excavation
+area.greece.color                = #ff5b2b
+area.greece.id                   = 8
+area.greece.to.london            = warsaw,berlin
+area.greece.to.paris             = roma
+area.greece.to.roma              = 
+area.greece.to.berlin            = warsaw
+area.greece.to.vienna            = roma
+area.greece.to.warsaw            = 
+area.greece.to.moscow            = warsaw
+area.greece.to.greece            = 
+area.greece.to.crete             = 
+area.greece.to.egypt             = crete
+area.greece.to.palestine         = crete
+area.greece.to.mesopotamia       = 
+
+area.greece.pointTokens              = p1a,1:1|p1b,1:1|p1c,1:1|p1d,1:1|p2a,2:1|p2b,2:1|p2c,2:1|p2d,2:1|p3a,3:1|p3b,3:1|p3c,3:1|p4a,4:1|p5a,5:1|p5b,5:1|p6a,6:1
+area.greece.emptyTokens              = ea:16
+area.greece.generalKnowledgeTokens   = ga:1
+area.greece.specificKnowledgeTokens  = sa:1
 
 # crete
-crete.name                        = crete
-crete.type                        = excavation
-crete.color                       = #895959
-crete.pointTokens                 = 1:3,2:2,3:4,4:3,5:1,6:0
-crete.to.london                   = roma,paris
-crete.to.paris                    = roma
-crete.to.roma                     = 
-crete.to.berlin                   = roma,paris
-crete.to.vienna                   = roma
-crete.to.warsaw                   = greece
-crete.to.moscow                   = greece,warsaw
-crete.to.greece                   = 
-crete.to.crete                    = 
-crete.to.egypt                    = 
-crete.to.palestine                = 
-crete.to.mesopotamia              = palestine
+area.crete.name                        = crete
+area.crete.type                        = excavation
+area.crete.color                       = #895959
+area.crete.id                   = 9
+area.crete.to.london                   = roma,paris
+area.crete.to.paris                    = roma
+area.crete.to.roma                     = 
+area.crete.to.berlin                   = roma,paris
+area.crete.to.vienna                   = roma
+area.crete.to.warsaw                   = greece
+area.crete.to.moscow                   = greece,warsaw
+area.crete.to.greece                   = 
+area.crete.to.crete                    = 
+area.crete.to.egypt                    = 
+area.crete.to.palestine                = 
+area.crete.to.mesopotamia              = palestine
+
+area.crete.pointTokens                 = p1a,1:1|p1b,1:1|p1c,1:1|p2a,2:1|p2b,2:1|p3a,3:1|p3b,3:1|p3c,3:1|p3d,3:1|p4a,4:1|p4b,4:1|p4c,4:1|p5a,5:1
+area.crete.emptyTokens                 = ea:16
+area.crete.generalKnowledgeTokens      = ga:1
+area.crete.specificKnowledgeTokens     = sa:1
 
 # egypt
-egypt.name                        = egypt
-egypt.type                        = excavation
-egypt.color                       = #fff168
-egypt.pointTokens                 = 1:4,2:2,3:3,4:2,5:1,6:1
-egypt.to.london                   = crete,roma,paris
-egypt.to.paris                    = crete,roma
-egypt.to.roma                     = crete
-egypt.to.berlin                   = crete,roma,paris
-egypt.to.vienna                   = crete,roma
-egypt.to.warsaw                   = crete,greece
-egypt.to.moscow                   = crete,greece,warsaw
-egypt.to.greece                   = crete
-egypt.to.crete                    = 
-egypt.to.egypt                    = 
-egypt.to.palestine                = 
-egypt.to.mesopotamia              = palestine
+area.egypt.name                        = egypt
+area.egypt.type                        = excavation
+area.egypt.color                       = #fff168
+area.egypt.id                   = 10
+area.egypt.to.london                   = crete,roma,paris
+area.egypt.to.paris                    = crete,roma
+area.egypt.to.roma                     = crete
+area.egypt.to.berlin                   = crete,roma,paris
+area.egypt.to.vienna                   = crete,roma
+area.egypt.to.warsaw                   = crete,greece
+area.egypt.to.moscow                   = crete,greece,warsaw
+area.egypt.to.greece                   = crete
+area.egypt.to.crete                    = 
+area.egypt.to.egypt                    = 
+area.egypt.to.palestine                = 
+area.egypt.to.mesopotamia              = palestine
+
+area.egypt.pointTokens                 = p1a,1:1|p1b,1:1|p1c,1:1|p1d,1:1|p2a,2:1|p2b,2:1|p3a,3:1|p3b,3:1|p3c,3:1|p4a,4:1|p4b,4:1|p5a,5:1|p6a,6:1
+area.egypt.emptyTokens                 = ea:16
+area.egypt.generalKnowledgeTokens      = ga:1
+area.egypt.specificKnowledgeTokens     = sa:1
 
 # palestine
-palestine.name                    = palestine
-palestine.type                    = excavation
-palestine.color                   = #b7ca79
-palestine.pointTokens             = 1:5,2:3,3:1,4:1,5:1,6:1,7:1
-palestine.to.london               = crete,roma,paris
-palestine.to.paris                = crete,roma
-palestine.to.roma                 = crete
-palestine.to.berlin               = crete,greece,warsaw
-palestine.to.vienna               = crete,roma
-palestine.to.warsaw               = crete,greece
-palestine.to.moscow               = crete,greece,warsaw
-palestine.to.greece               = crete
-palestine.to.crete                = 
-palestine.to.egypt                = 
-palestine.to.palestine            = 
-palestine.to.mesopotamia          = 
+area.palestine.name                    = palestine
+area.palestine.type                    = excavation
+area.palestine.color                   = #b7ca79
+area.palestine.id                      = 11
+area.palestine.to.london               = crete,roma,paris
+area.palestine.to.paris                = crete,roma
+area.palestine.to.roma                 = crete
+area.palestine.to.berlin               = crete,greece,warsaw
+area.palestine.to.vienna               = crete,roma
+area.palestine.to.warsaw               = crete,greece
+area.palestine.to.moscow               = crete,greece,warsaw
+area.palestine.to.greece               = crete
+area.palestine.to.crete                = 
+area.palestine.to.egypt                = 
+area.palestine.to.palestine            = 
+area.palestine.to.mesopotamia          = 
+
+area.palestine.emptyTokens             = ea:16
+area.palestine.pointTokens             = p1a,1:1|p1b,1:1|p1c,1:1|p1d,1:1|p1e,1:1|p2a,2:1|p2b,2:1|p2c,2:1|p3a,3:1|p4a,4:1|p5a,5:1|p6a,6:1|p7a,7:1
+area.palestine.generalKnowledgeTokens  = ga:1
+area.palestine.specificKnowledgeTokens = sa:1
 
 # mesopotamia
-mesopotamia.name                  = mesopotamia
-mesopotamia.type                  = excavation
-mesopotamia.color                 = #375d81
-mesopotamia.pointTokens           = 1:5,3:3,4:3,5:2,6:1,7:1
-mesopotamia.to.london             = greece,roma,paris
-mesopotamia.to.paris              = greece,roma
-mesopotamia.to.roma               = greece
-mesopotamia.to.berlin             = greece,warsaw
-mesopotamia.to.vienna             = greece,roma
-mesopotamia.to.warsaw             = greece
-mesopotamia.to.moscow             = greece,warsaw
-mesopotamia.to.greece             = 
-mesopotamia.to.crete              = palestine
-mesopotamia.to.egypt              = palestine
-mesopotamia.to.palestine          = crete
-mesopotamia.to.mesopotamia        = 
+area.mesopotamia.name                  = mesopotamia
+area.mesopotamia.type                  = excavation
+area.mesopotamia.color                 = #375d81
+area.mesopotamia.id                    = 12
+area.mesopotamia.to.london             = greece,roma,paris
+area.mesopotamia.to.paris              = greece,roma
+area.mesopotamia.to.roma               = greece
+area.mesopotamia.to.berlin             = greece,warsaw
+area.mesopotamia.to.vienna             = greece,roma
+area.mesopotamia.to.warsaw             = greece
+area.mesopotamia.to.moscow             = greece,warsaw
+area.mesopotamia.to.greece             = 
+area.mesopotamia.to.crete              = palestine
+area.mesopotamia.to.egypt              = palestine
+area.mesopotamia.to.palestine          = crete
+area.mesopotamia.to.mesopotamia        = 
+
+
+area.mesopotamia.pointTokens             = p1a,1:1|p1b,1:2|p1c,1:1|p1d,1:1|p1e,1:1|p3a,3:1|p4a,4:1|p4b,4:1|p4c,4:1|p5a,5:1|p5b,5:1|p6a,6:1|p7a,7:1
+area.mesopotamia.emptyTokens             = ea:16
+area.mesopotamia.generalKnowledgeTokens  = ga:1
+area.mesopotamia.specificKnowledgeTokens = sa:1
