tres gros commit -correction des properties - ajout de donnee dans .properties - ajout des methodes de check si un player peut jouer ou pas cette action - refactorisation - correction diverse bug et autre - ajout de test pour (check si un player peut jouer ou pas cette action) - maj de SAMPLECLASS - plein d'autres truc je me souviens même plus (j'ai codé toute la journée)

--- a/src/main/config/areas.properties
+++ b/src/main/config/areas.properties
@@ -14,16 +14,16 @@ area.london.type                 = touristic
 area.london.id                   = 1
 area.london.to.london            = 
 area.london.to.paris             = 
-area.london.to.roma              = paris
+area.london.to.rome              = paris
 area.london.to.berlin            = paris
 area.london.to.vienna            = berlin
 area.london.to.warsaw            = berlin
 area.london.to.moscow            = berlin,warsaw
-area.london.to.greece            = paris,roma
-area.london.to.crete             = paris,roma
-area.london.to.egypt             = paris,roma,crete
-area.london.to.palestine         = paris,roma,crete
-area.london.to.mesopotamia       = paris,roma,greece
+area.london.to.greece            = paris,rome
+area.london.to.crete             = paris,rome
+area.london.to.egypt             = paris,rome,crete
+area.london.to.palestine         = paris,rome,crete
+area.london.to.mesopotamia       = paris,rome,greece
 
 # paris
 area.paris.name                  = paris
@@ -31,33 +31,33 @@ area.paris.type                  = touristic
 area.paris.id                   = 2
 area.paris.to.london             = 
 area.paris.to.paris              = 
-area.paris.to.roma               = 
+area.paris.to.rome               = 
 area.paris.to.berlin             = 
 area.paris.to.vienna             = 
 area.paris.to.warsaw             = berlin
 area.paris.to.moscow             = berlin,warsow
-area.paris.to.greece             = roma
-area.paris.to.crete              = roma
-area.paris.to.egypt              = roma,crete
-area.paris.to.palestine          = roma,crete
-area.paris.to.mesopotamia        = roma,greece
+area.paris.to.greece             = rome
+area.paris.to.crete              = rome
+area.paris.to.egypt              = rome,crete
+area.paris.to.palestine          = rome,crete
+area.paris.to.mesopotamia        = rome,greece
 
-# roma
-area.roma.name                 = roma
-area.roma.type                 = touristic
-area.roma.id                   = 3
-area.roma.to.london            = paris
-area.roma.to.paris             = 
-area.roma.to.roma              = 
-area.roma.to.berlin            = paris
-area.roma.to.vienna            = 
-area.roma.to.warsaw            = vienna
-area.roma.to.moscow            = vienna,warsow
-area.roma.to.greece            = 
-area.roma.to.crete             = 
-area.roma.to.egypt             = crete
-area.roma.to.palestine         = crete
-area.roma.to.mesopotamia       = greece
+# rome
+area.rome.name                 = rome
+area.rome.type                 = touristic
+area.rome.id                   = 3
+area.rome.to.london            = paris
+area.rome.to.paris             = 
+area.rome.to.rome              = 
+area.rome.to.berlin            = paris
+area.rome.to.vienna            = 
+area.rome.to.warsaw            = vienna
+area.rome.to.moscow            = vienna,warsow
+area.rome.to.greece            = 
+area.rome.to.crete             = 
+area.rome.to.egypt             = crete
+area.rome.to.palestine         = crete
+area.rome.to.mesopotamia       = greece
 
 # berlin
 area.berlin.name                 = berlin
@@ -65,7 +65,7 @@ area.berlin.type                 = touristic
 area.berlin.id                   = 4
 area.berlin.to.london            = 
 area.berlin.to.paris             = 
-area.berlin.to.roma              = paris
+area.berlin.to.rome              = paris
 area.berlin.to.berlin            = 
 area.berlin.to.vienna            = warsaw
 area.berlin.to.warsaw            = 
@@ -82,16 +82,16 @@ area.vienna.type                 = touristic
 area.vienna.id                   = 5
 area.vienna.to.london            = paris
 area.vienna.to.paris             = 
-area.vienna.to.roma              = 
+area.vienna.to.rome              = 
 area.vienna.to.berlin            = 
 area.vienna.to.vienna            = 
 area.vienna.to.warsaw            = 
 area.vienna.to.moscow            = warsaw
-area.vienna.to.greece            = roma
-area.vienna.to.crete             = roma
-area.vienna.to.egypt             = roma,crete
-area.vienna.to.palestine         = roma,crete
-area.vienna.to.mesopotamia       = roma,greece
+area.vienna.to.greece            = rome
+area.vienna.to.crete             = rome
+area.vienna.to.egypt             = rome,crete
+area.vienna.to.palestine         = rome,crete
+area.vienna.to.mesopotamia       = rome,greece
 
 # warsaw
 area.warsaw.name                 = warsaw
@@ -99,7 +99,7 @@ area.warsaw.type                 = touristic
 area.warsaw.id                   = 6
 area.warsaw.to.london            = berlin
 area.warsaw.to.paris             = berlin
-area.warsaw.to.roma              = vienna
+area.warsaw.to.rome              = vienna
 area.warsaw.to.berlin            = 
 area.warsaw.to.vienna            = 
 area.warsaw.to.warsaw            = 
@@ -116,7 +116,7 @@ area.moscow.type                 = touristic
 area.moscow.id                   = 7
 area.moscow.to.london            = warsaw,berlin
 area.moscow.to.paris             = warsaw,berlin
-area.moscow.to.roma              = warsaw,vienna
+area.moscow.to.rome              = warsaw,vienna
 area.moscow.to.berlin            = warsaw
 area.moscow.to.vienna            = warsaw
 area.moscow.to.warsaw            = 
@@ -137,10 +137,10 @@ area.greece.type                 = excavation
 area.greece.color                = #ff5b2b
 area.greece.id                   = 8
 area.greece.to.london            = warsaw,berlin
-area.greece.to.paris             = roma
-area.greece.to.roma              = 
+area.greece.to.paris             = rome
+area.greece.to.rome              = 
 area.greece.to.berlin            = warsaw
-area.greece.to.vienna            = roma
+area.greece.to.vienna            = rome
 area.greece.to.warsaw            = 
 area.greece.to.moscow            = warsaw
 area.greece.to.greece            = 
@@ -159,11 +159,11 @@ area.crete.name                        = crete
 area.crete.type                        = excavation
 area.crete.color                       = #895959
 area.crete.id                   = 9
-area.crete.to.london                   = roma,paris
-area.crete.to.paris                    = roma
-area.crete.to.roma                     = 
-area.crete.to.berlin                   = roma,paris
-area.crete.to.vienna                   = roma
+area.crete.to.london                   = rome,paris
+area.crete.to.paris                    = rome
+area.crete.to.rome                     = 
+area.crete.to.berlin                   = rome,paris
+area.crete.to.vienna                   = rome
 area.crete.to.warsaw                   = greece
 area.crete.to.moscow                   = greece,warsaw
 area.crete.to.greece                   = 
@@ -182,11 +182,11 @@ area.egypt.name                        = egypt
 area.egypt.type                        = excavation
 area.egypt.color                       = #fff168
 area.egypt.id                   = 10
-area.egypt.to.london                   = crete,roma,paris
-area.egypt.to.paris                    = crete,roma
-area.egypt.to.roma                     = crete
-area.egypt.to.berlin                   = crete,roma,paris
-area.egypt.to.vienna                   = crete,roma
+area.egypt.to.london                   = crete,rome,paris
+area.egypt.to.paris                    = crete,rome
+area.egypt.to.rome                     = crete
+area.egypt.to.berlin                   = crete,rome,paris
+area.egypt.to.vienna                   = crete,rome
 area.egypt.to.warsaw                   = crete,greece
 area.egypt.to.moscow                   = crete,greece,warsaw
 area.egypt.to.greece                   = crete
@@ -205,11 +205,11 @@ area.palestine.name                    = palestine
 area.palestine.type                    = excavation
 area.palestine.color                   = #b7ca79
 area.palestine.id                      = 11
-area.palestine.to.london               = crete,roma,paris
-area.palestine.to.paris                = crete,roma
-area.palestine.to.roma                 = crete
+area.palestine.to.london               = crete,rome,paris
+area.palestine.to.paris                = crete,rome
+area.palestine.to.rome                 = crete
 area.palestine.to.berlin               = crete,greece,warsaw
-area.palestine.to.vienna               = crete,roma
+area.palestine.to.vienna               = crete,rome
 area.palestine.to.warsaw               = crete,greece
 area.palestine.to.moscow               = crete,greece,warsaw
 area.palestine.to.greece               = crete
@@ -228,11 +228,11 @@ area.mesopotamia.name                  = mesopotamia
 area.mesopotamia.type                  = excavation
 area.mesopotamia.color                 = #375d81
 area.mesopotamia.id                    = 12
-area.mesopotamia.to.london             = greece,roma,paris
-area.mesopotamia.to.paris              = greece,roma
-area.mesopotamia.to.roma               = greece
+area.mesopotamia.to.london             = greece,rome,paris
+area.mesopotamia.to.paris              = greece,rome
+area.mesopotamia.to.rome               = greece
 area.mesopotamia.to.berlin             = greece,warsaw
-area.mesopotamia.to.vienna             = greece,roma
+area.mesopotamia.to.vienna             = greece,rome
 area.mesopotamia.to.warsaw             = greece
 area.mesopotamia.to.moscow             = greece,warsaw
 area.mesopotamia.to.greece             = 
