--- a/src/main/config/config.properties
+++ b/src/main/config/config.properties
@@ -9,12 +9,14 @@
 # ------------------------------------------------------------------------------
 #                     General (General configuration)
 # ------------------------------------------------------------------------------
-
+expoCardTokens.id   = 
 
 # ------------------------------------------------------------------------------
 #                     Rules (configuration about game's rules)
 # ------------------------------------------------------------------------------
-
+#PATTERN (nbjoueur)yea-month-day|((nbjoueur)yea-month-day|...
+game.endGameDatePosition    = 1903-12-31|1903-12-31|1903-12-31|1903-12-31
+game.startGameDatePosition  = 1901-01-01|1901-01-01|1901-01-01|1902-01-01
 
 # ------------------------------------------------------------------------------
 #                     Chronotime
