--- a/src/main/config/config.properties
+++ b/src/main/config/config.properties
@@ -14,7 +14,13 @@
 # ------------------------------------------------------------------------------
 #                     Rules (configuration about game's rules)
 # ------------------------------------------------------------------------------
+#PATTERN 
+tokens.bonus.assistant  = 
+tokens.bonus.shovel     =
+tokens.bonus.congress   =
 
+#PATTERN : date1/date2/date3 ( 1 joueur -> date1, 2 joueur -> date2 ) 
+dateDepart = 1900.12.31/1900.12.31/1900.12.31/1900.12.31
 
 # ------------------------------------------------------------------------------
 #                     Chronotime
