--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,10 +4,20 @@
 #
 # ------------------------------------------------------------------------------
 
+# see http://blog.armstrongconsulting.com/?p=220 for environment swhitch
 
-# Root logger option
+# Root logger option (uncomment the running environment)
+
+# development
 log4j.rootLogger=DEBUG, stdout
- 
+
+# test (prod)
+#log4j.rootLogger=ERROR, stdout file
+
+# prod
+#log4j.rootLogger=ERROR, file
+
+
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
