--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+        <!--Apache Commons Lang provides these extra methods for manipulation of Java core classes-->
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
@@ -44,6 +45,7 @@
   
   
     <build>
+        
         <resources>
             <!--Supplementary resource path--> 
             <resource>
@@ -54,6 +56,7 @@
                 <directory>src/main/resources</directory>
             </resource>
         </resources>
+        
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -65,6 +68,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        
     </build>
 
 </project>
