--- a/src/main/config/config.properties
+++ b/src/main/config/config.properties
@@ -11,6 +11,8 @@
 # ------------------------------------------------------------------------------
 expoCardTokens.id   = 
 
+path.images = /images/
+
 # ------------------------------------------------------------------------------
 #                     Rules (configuration about game's rules)
 # ------------------------------------------------------------------------------
